<resources>

    <string name="quicklook_loading_file">Loading...</string>

    <string name="quicklook_permission_error">Permission Error. Check permissions of application.</string>

    <string name="default_file_name_placeholder">Filename</string>
    <string name="default_file_type_placeholder">File type</string>
    <string name="default_file_size_placeholder">Size</string>

    <string name="info_pdf_load_failed">PDF load failed!</string>
    <string name="info_document_saved">File saved on %s folder</string>

    <string name="item_share_title">Sending Quicklook file</string>
    <string name="item_share_text">Hi! I\'m sending you a file from Quicklook ;)</string>

    <string name="items_default_formatted_name">Default Item</string>
    <string name="items_file_formatted_name">File</string>
    <string name="items_folder_formatted_name">Folder</string>
    <string name="items_excel_formatted_name">Microsoft Excel Document</string>
    <string name="items_word_formatted_name">Microsoft Word Document</string>
    <string name="items_powerpoint_formatted_name">Microsoft PowerPoint Document</string>
    <string name="items_pdf_formatted_name">Acrobat PDF Document</string>

    <string name="items_picture_formatted_name">Picture</string>
    <string name="items_rar_formatted_name">RAR Compressed File</string>
    <string name="items_tar_formatted_name">TAR Compressed File</string>
    <string name="items_zip_formatted_name">ZIP Compressed File</string>
    <string name="items_text_formatted_name">Text File</string>
    <string name="items_code_formatted_name">Source Code File</string>
    <string name="quicklook_save">Save</string>
    <string name="quicklook_open">Open with...</string>
    <string name="quicklook_share">Share</string>
    <string name="quicklook_item_error">Error showing the item. Try opening it again.</string>
    <string name="quicklook_bad_configuration">Something happened, please retry or contact us</string>
    <string name="quicklook_open_downloads">View in downloads</string>

    <string name="quicklook_error_opening">The file couln\'t be opened</string>
    <string name="quicklook_error_open_downloads">We were unable to open your Download app</string>

</resources>
