<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/save"
        android:orderInCategory="20"
        app:showAsAction="never"
        android:title="@string/quicklook_save">
    </item>-->
    <item
        android:id="@+id/open_in_downloads"
        app:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/quicklook_open_downloads">
    </item>
    <item
        android:id="@+id/open_with"
        app:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/quicklook_open">
    </item>
    <item
        android:id="@+id/share"
        app:showAsAction="never"
        android:orderInCategory="9999"
        android:title="@string/quicklook_share">
    </item>
</menu>