<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.uchile.ing.adi.quicklooklib.fragments.DefaultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_file_name_placeholder"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/filetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_file_type_placeholder"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/filesize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_file_size_placeholder"
            android:layout_gravity="center"/>
    </LinearLayout>






</android.support.design.widget.CoordinatorLayout>
